# codespaces-jupyter

./: .buildinfo  intro.html  markdown-notebooks.html  markdown.html  notebooks.html  objects.inv  pyproject.toml  search.html  searchindex.js
_sources/: intro.md
stage0article/: _config.yml  _toc.yml  stage-0-initial-analysis-of-facebook-metrics-data.ipynb
stage0article/_build/.doctrees/: environment.pickle  intro.doctree  markdown-notebooks.doctree  markdown.doctree  notebooks.doctree  stage-0-initial-analysis-of-facebook-metrics-data.doctree
stage0article/_build/html/: .buildinfo  genindex.html  intro.html  search.html  searchindex.js  stage-0-initial-analysis-of-facebook-metrics-data.html
stage0article/_build/html/_sources/: intro.md
stage0article/_build/jupyter_execute/: markdown-notebooks.ipynb  notebooks.ipynb  stage-0-initial-analysis-of-facebook-metrics-data.ipynb
